# twitch-search

./: Cargo.toml  readme.md
src/: main.rs  utils.rs
src/api/: auth.rs  mod.rs  streams.rs
